# Arcanum

./: .gitattributes  .gitignore  .impeccable.md  ARCANUM_STYLE_GUIDE.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  PRODUCT.md  README.md
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
creator/: .gitignore  index.html  node_modules  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
creator/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
creator/src-tauri/: Cargo.toml  tauri.conf.json
creator/src-tauri/capabilities/: default.json
creator/src-tauri/icons/: icon.icns
creator/src-tauri/src/: admin.rs  anthropic.rs  arcanum_meta.rs  asset_migration.rs  assets.rs  audio_mix.rs  cancellation.rs  captions.rs  deepinfra.rs  elevenlabs.rs  embeddings.rs  ffmpeg.rs  ffmpeg_progress.rs  fs_utils.rs  generation.rs  git.rs  http.rs  hub.rs  hub_ai.rs  image_profiles.rs  lib.rs  llm.rs  main.rs  openai_images.rs  openai_tts.rs  openrouter.rs  project.rs  project_settings.rs  r2.rs  rag.rs  runware.rs  server.rs  settings.rs  sketch.rs  snapshots.rs  vibes.rs  video_encode.rs  video_export.rs  voices.rs
docs/: DERIVED_STATS.md  DEVELOPER_GUIDE.md  FACTIONS_MUD_CHANGES.md  MULTIPLICATIVE_SCALING_SPEC.md
hub-admin/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
hub-admin/src/: App.tsx  index.css  vite-env.d.ts
hub-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
hub-worker/src/: auth.ts  db.ts  email.ts  env.ts  index.ts  metadata.ts  og.ts  schema.sql  turnstile.ts  util.ts
reference/: DATA_DRIVEN_STATS_PLAN.md  README.md
reference/config/: AppConfig.kt  application.yaml
reference/docs/: FINAL_PLAN.md  STAT_SYSTEM_SPEC.md
reference/domain-model/: AchievementDef.kt  AchievementState.kt  CraftingQuality.kt  CraftingSkillState.kt  Direction.kt  DungeonDifficulty.kt  DungeonTemplateDef.kt  GatheringNodeDef.kt  GuildRecord.kt  HouseRecord.kt  Item.kt  ItemId.kt  ItemInstance.kt  ItemSlot.kt  MailMessage.kt  MobId.kt  MobSpawn.kt  MobState.kt  MobTemplate.kt  PlayerClassDef.kt  PuzzleDef.kt  QuestDef.kt  RaceDef.kt  RecipeDef.kt  Room.kt  RoomId.kt  RoomTemplate.kt  SessionId.kt  SpriteDefinition.kt  StatDefinition.kt  StatMap.kt  TrainerDefinition.kt  World.kt  WorldFactory.kt
reference/example-zones/: blood_arena.yaml  cobblestone_road.yaml  crossroads_path.yaml
reference/registries/: AbilityRegistry.kt  AbilityRegistryLoader.kt  CraftingRegistry.kt  CraftingSkillRegistry.kt  DefinitionRegistry.kt  DungeonRegistry.kt  EquipmentSlotRegistry.kt  GatheringRegistry.kt  GenderRegistry.kt  PlayerClassRegistry.kt  PlayerClassRegistryLoader.kt  RaceRegistry.kt  RaceRegistryLoader.kt  StatusEffectRegistryLoader.kt
reference/world-loader/: WorldLoader.kt
reference/world-yaml-dtos/: BehaviorFile.kt  DungeonFile.kt  (+7 more)
showcase/: .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
(+899 files in other folders)
