[package]
name = "arcanum"
version = "2.4.0"
description = "Arcanum — world building, lore, and art generation tool"
authors = []
edition = "2021"

[lib]
name = "arcanum_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["ai"]
ai = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs", "process"] }
tauri-plugin-window-state = "2.4.1"
imagesize = "0.13"
regex = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
webp = "0.3"
ffmpeg-sidecar = "2"
which = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }
